Update README.md
Added more detailed instructions to setting up JavaFX and the correct libraries to run our project